<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SSOLoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/km_sso_description_text"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp">

        <EditText
            android:id="@+id/userId_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/km_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:background="@drawable/login_btn_background"
        android:text="@string/login"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/km_back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/km_go_back_to_login"
        android:textColor="@color/applozic_theme_color_primary"
        android:textSize="16sp" />

</LinearLayout>