<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.MainLoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp">

        <EditText
            android:id="@+id/userId_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/km_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/showPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif"
            android:letterSpacing="0.04"
            android:text="@string/show"
            android:textColor="#ff828080"
            android:textSize="12sp" />

    </FrameLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.04"
        android:text="@string/forgot_password"
        android:textColor="@color/applozic_theme_color_primary"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:background="@drawable/login_btn_background"
        android:text="@string/login"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:orientation="horizontal">

        <com.applozic.mobicomkit.uiwidgets.DashedLineView
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="6.5dp"
            android:layout_marginRight="6.5dp"
            android:layout_weight="7" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:letterSpacing="0.03"
            android:text="@string/or"
            android:textColor="#979393"
            android:textSize="16sp"
            android:textStyle="normal" />

        <com.applozic.mobicomkit.uiwidgets.DashedLineView
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6.5dp"
            android:layout_marginLeft="6.5dp"
            android:layout_weight="7" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_google_sign_in"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:background="@drawable/google_signin_btn_background"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/google_logo_icon_png_transparent_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="3sp"
            android:text="@string/login_with_google"
            android:textColor="#4285f4"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sso_login"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:background="@drawable/google_signin_btn_background"
        android:text="@string/login_with_sso"
        android:textSize="16sp"
        android:textColor="#276efa" />

    <TextView
        android:id="@+id/singupInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:letterSpacing="0.04"
        android:text="@string/signup_info"
        android:textColor="#5e5d60"
        android:textSize="14sp"
        android:textStyle="normal" />
</LinearLayout>