<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/km_profile_image_select_fragment_background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km_profile_photo"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">
        <!-- Option Remove Photo -->
        <LinearLayout
            android:id="@+id/remove_profile_photo"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/km_profile_image_background"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_delete" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/km_remove"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
        <!-- Option Gallery -->
        <LinearLayout
            android:id="@+id/gallery_option"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/km_profile_image_background"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_gallery" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/km_gallery"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
        <!-- Option Camera -->
        <LinearLayout
            android:id="@+id/camera_option"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/km_profile_image_background"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/km_camera"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/snackbar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>
</LinearLayout>

